# MMAC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SEO-OPTIMIZATION.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.claude/agents/: error-handling-standardizer.md  i18n-localization-agent.md  macos-permissions-auditor.md  macos-system-expert.md  performance-profiler.md  react-component-tester.md  react-tailwind-views.md  rust-test-validator.md  tauri-build-release.md  tauri-ipc-specialist.md  tauri-rust-backend.md
.claude/logs/: trace.sqlite
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
SysMac/: Package.swift
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.claude/logs/: trace.sqlite
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analyzer.rs  battery.rs  bluetooth.rs  cleaning.rs  daemons.rs  duplicates.rs  firewall.rs  homebrew.rs  largefiles.rs  memory.rs  mod.rs  monitor.rs  network.rs  orphaned.rs  ports.rs  processes.rs  projects.rs  startup.rs  uninstaller.rs
src-tauri/src/services/: analyzer.rs  battery.rs  bluetooth.rs  cleaner.rs  daemons.rs  duplicates.rs  firewall.rs  homebrew.rs  largefiles.rs  memory.rs  mod.rs  monitor.rs  network.rs  orphaned.rs  processes.rs  projects.rs  scanner.rs  startup.rs  uninstaller.rs
src-tauri/tests/fixtures/: ioreg_battery.txt  lsof_ports.txt  netstat_tcp.txt  vm_stat.txt
(+130 files in other folders)
