[package]
name = "sysmac"
version = "0.1.0"
description = "Sistema de optimizacion y monitoreo para macOS"
authors = ["SysMac Team"]
edition = "2021"

[lib]
name = "sysmac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
walkdir = "2"
trash = "5"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
plist = "1"
regex = "1"
shellexpand = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
jwalk = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
